--- a/src/app/Components/web-view/web-view.component.html
+++ b/src/app/Components/web-view/web-view.component.html
@@ -1,3 +1,2 @@
-<div>
-    <app-visualizador></app-visualizador>
-</div>
+<app-primary-component (colorChange)="handleColorChange($event)"></app-primary-component>
+<app-visualizador [color]="color"></app-visualizador>
