--- a/src/app/Components/contrasena/contrasena.component.html
+++ b/src/app/Components/contrasena/contrasena.component.html
@@ -1,1 +1,2 @@
-<p>contrasena works!</p>
+<!-- contrasena.component.html -->
+<input type="password" (input)="onPasswordChange($event)" placeholder="Ingrese su contraseña" />
