--- a/src/app/Components/e-mail/e-mail.component.html
+++ b/src/app/Components/e-mail/e-mail.component.html
@@ -1,1 +1,2 @@
-<p>e-mail works!</p>
+<!-- e-mail.component.html -->
+<input type="email" (input)="onEmailChange($event)" placeholder="Ingrese su correo electrónico" />
