--- a/src/app/Components/secondary-component/secondary-component.component.html
+++ b/src/app/Components/secondary-component/secondary-component.component.html
@@ -1,1 +1,2 @@
-<p>secondary-component works!</p>
+<!-- secondary-component.component.html -->
+<button class="secondary-button" (click)="onButtonClick()">Secundario</button>
