--- a/src/app/Components/texto/texto.component.html
+++ b/src/app/Components/texto/texto.component.html
@@ -1,1 +1,2 @@
-<p>texto works!</p>
+<!-- texto.component.html -->
+<input type="text" (input)="onTextChange($event)" placeholder="Ingrese su texto" />
