--- a/src/app/Components/accept-component/accept-component.component.html
+++ b/src/app/Components/accept-component/accept-component.component.html
@@ -1,2 +1,1 @@
-<!-- accept-component.component.html -->
-<button (click)="onButtonClick()">Aceptar</button>
+<button class="accept-button" (click)="onButtonClick()">Aceptar</button>
