--- a/src/app/Components/cancel-component/cancel-component.component.html
+++ b/src/app/Components/cancel-component/cancel-component.component.html
@@ -1,2 +1,1 @@
-<!-- cancel-component.component.html -->
-<button (click)="onButtonClick()">Cancelar</button>
+<button class="cancel-button" (click)="onButtonClick()">Cancelar</button>
