--- a/src/app/Components/primary-component/primary-component.component.html
+++ b/src/app/Components/primary-component/primary-component.component.html
@@ -1,1 +1,1 @@
-<button class="btn-primario" (click)="onButtonClick()">Primario</button>
+<button class="primary-button" (click)="onButtonClick()">Primario</button>
