--- a/src/app/Components/primary-component/primary-component.component.css
+++ b/src/app/Components/primary-component/primary-component.component.css
@@ -1,12 +1,13 @@
-.btn-primario {
-    padding: 10px 20px; /* Espaciado interno */
-    background-color: rgb(0, 123, 255); /* Color de fondo (azul) */
-    color: white; /* Color del texto */
-    border: none; /* Sin borde */
-    border-radius: 5px; /* Bordes redondeados */
-    cursor: pointer; /* Cambia el cursor al pasar el mouse */
-}
-
-.btn-primario:hover {
-    background-color: rgb(0, 105, 217); /* Color de fondo al pasar el mouse */
-}
+.primary-button {
+    background-color: blue; /* Botón primario en azul */
+    color: white; /* Texto en blanco */
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 10px; /* Espacio entre botones */
+  }
+  
+  .primary-button:hover {
+    opacity: 0.8; /* Efecto hover */
+  }
