--- a/src/app/Components/dark-mode/dark-mode.component.html
+++ b/src/app/Components/dark-mode/dark-mode.component.html
@@ -1,3 +1,3 @@
-<button (click)="toggleDarkMode()">
-    {{ isDarkMode ? 'Modo Claro' : 'Modo Oscuro' }}
-  </button>
+<button (click)="toggleMode()">
+  {{ isDarkMode ? 'Modo Claro' : 'Modo Oscuro' }}
+</button>
