--- a/src/app/Components/accept-component/accept-component.component.css
+++ b/src/app/Components/accept-component/accept-component.component.css
@@ -1,13 +1,17 @@
 .accept-button {
-    background-color: green; /* Botón de aceptar en verde */
-    color: white; /* Texto en blanco */
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-bottom: 10px; /* Espacio entre botones */
-  }
-  
-  .accept-button:hover {
-    opacity: 0.8; /* Efecto hover */
-  }
+  background-color: #4caf50; /* Verde similar al de la imagen */
+  color: white;
+  padding: 12px 20px; /* Tamaño más amplio */
+  border: none;
+  border-radius: 50px; /* Borde completamente redondeado */
+  font-size: 16px; /* Texto más grande */
+  font-weight: bold; /* Texto en negrita */
+  cursor: pointer;
+  transition: transform 0.2s ease, opacity 0.3s ease; /* Animación */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
+}
+
+.accept-button:hover {
+  transform: scale(1.05); /* Ligero aumento al pasar el cursor */
+  opacity: 0.9;
+}
