--- a/src/app/Components/cancel-component/cancel-component.component.css
+++ b/src/app/Components/cancel-component/cancel-component.component.css
@@ -1,13 +1,17 @@
 .cancel-button {
-    background-color: red; /* Botón de cancelar en rojo */
-    color: white; /* Texto en blanco */
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-bottom: 10px; /* Espacio entre botones */
-  }
-  
-  .cancel-button:hover {
-    opacity: 0.8; /* Efecto hover */
-  }
+  background-color: #f44336; /* Rojo similar al de la imagen */
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 50px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: transform 0.2s ease, opacity 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.cancel-button:hover {
+  transform: scale(1.05);
+  opacity: 0.9;
+}
