--- a/src/app/Components/dark-mode/dark-mode.component.css
+++ b/src/app/Components/dark-mode/dark-mode.component.css
@@ -1,16 +1,19 @@
 .dark-mode-button {
-  background-color: #000; /* Fondo negro */
-  color: #fff; /* Texto blanco */
-  padding: 12px 20px;
-  border: 2px solid #fff; /* Borde blanco */
-  border-radius: 50px;
+  width: 120px;
+  height: 40px;
+  background-color: black;
+  color: white;
   font-size: 16px;
   font-weight: bold;
+  text-align: center;
+  border: 2px solid #555; /* Borde gris oscuro */
+  border-radius: 15px; /* Bordes redondeados */
   cursor: pointer;
-  transition: transform 0.2s ease, opacity 0.3s ease;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Sombra */
+  transition: 0.3s ease;
 }
 
 .dark-mode-button:hover {
-  transform: scale(1.05);
-  opacity: 0.9;
+  background-color: #333; /* Negro más claro */
+  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3); /* Sombra más intensa */
 }
