--- a/src/app/Components/primary-component/primary-component.component.css
+++ b/src/app/Components/primary-component/primary-component.component.css
@@ -1,17 +1,19 @@
 .primary-button {
-  background-color: #007bff; /* Azul primario */
+  width: 120px;
+  height: 40px;
+  background-color: #007BFF; /* Azul */
   color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 50px;
   font-size: 16px;
   font-weight: bold;
+  text-align: center;
+  border: none;
+  border-radius: 15px; /* Bordes redondeados */
   cursor: pointer;
-  transition: transform 0.2s ease, opacity 0.3s ease;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Sombra */
+  transition: 0.3s ease;
 }
 
 .primary-button:hover {
-  transform: scale(1.05);
-  opacity: 0.9;
+  background-color: #0056b3; /* Azul más oscuro al pasar el mouse */
+  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3); /* Sombra más intensa */
 }
