--- a/src/app/Components/secondary-component/secondary-component.component.css
+++ b/src/app/Components/secondary-component/secondary-component.component.css
@@ -1,17 +1,20 @@
 .secondary-button {
-  background-color: #03a9f4; /* Azul secundario */
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 50px;
+  width: 120px;
+  height: 40px;
+  background-color: white;
+  color: #007BFF; /* Azul para el texto */
   font-size: 16px;
   font-weight: bold;
+  text-align: center;
+  border: 2px solid #007BFF; /* Borde azul */
+  border-radius: 15px; /* Bordes redondeados */
   cursor: pointer;
-  transition: transform 0.2s ease, opacity 0.3s ease;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Sombra */
+  transition: 0.3s ease;
 }
 
 .secondary-button:hover {
-  transform: scale(1.05);
-  opacity: 0.9;
+  background-color: #f0f8ff; /* Fondo azul claro al pasar el mouse */
+  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3); /* Sombra más intensa */
 }
+
