--- a/src/app/Components/visualizador/visualizador.component.css
+++ b/src/app/Components/visualizador/visualizador.component.css
@@ -1,11 +1,3 @@
-/* Contenedor del visualizador */
-.visualizador-container {
-  display: flex;
-  flex-direction: column;
-  gap: 20px; /* Espaciado entre elementos */
-  font-family: Arial, sans-serif;
-  text-align: left; /* Alineación a la izquierda */
-}
 
 /* Títulos */
 .visualizador-title {
@@ -21,29 +13,37 @@
   font-weight: normal; /* No en negrita */
 }
 
+
+/* Contenedor del visualizador */
+.visualizador-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px; /* Espaciado entre elementos */
+  font-family: Arial, sans-serif;
+  text-align: left; /* Alineación a la izquierda para los textos */
+  height: 100%; /* Asegúrate de que ocupe toda la altura disponible */
+}
+
 /* Estilos de la figura visualizada */
-/* Estilos de la figura visual */
 .visualizador-shape {
-  align-self: center; /* Centra horizontalmente la figura */
-  margin-top: auto; /* Empuja la figura hacia abajo */
-  margin-bottom: 20px; /* Espaciado inferior con el borde del contenedor */
-  width: 120px; /* Aumentado el tamaño para mejor visibilidad */
-  height: 120px;
+  position: relative; /* Permite que la figura se coloque en el flujo normal */
+  margin-top: 65px; /* Mantén este valor para mover la figura más abajo */
   display: flex;
   justify-content: center; /* Centra el contenido interno de la figura */
   align-items: center;
+  overflow: hidden; /* Evita que el contenido se desborde */
+  margin-left: 200px; /* Ajusta este valor para mover la figura más a la derecha */
+  margin-right: auto; /* Mantiene el margen derecho automático */
 }
-
 .square {
-  width: 100px; /* Ancho del cuadrado */
-  height: 100px; /* Alto del cuadrado */
+  width: 200px; /* Ancho del cuadrado */
+  height: 200px; /* Alto del cuadrado */
   background-color: inherit; /* Hereda el color de fondo */
 }
 
 .circle {
-  width: 100px; /* Ancho del círculo */
-  height: 100px; /* Alto del círculo */
+  width: 200px; /* Ancho del círculo */
+  height: 200px; /* Alto del círculo */
   background-color: inherit; /* Hereda el color de fondo */
   border-radius: 50%; /* Hace que el elemento sea un círculo */
 }
-
