--- a/src/app/Components/e-mail/e-mail.component.html
+++ b/src/app/Components/e-mail/e-mail.component.html
@@ -1,2 +1,6 @@
-<!-- e-mail.component.html -->
-<input type="email" (input)="onEmailChange($event)" placeholder="Ingrese su correo electrónico" />
+<input 
+  type="email" 
+  [value]="emailValue" 
+  (input)="onEmailChange($event)" 
+  placeholder="Ingrese su correo electrónico" />
+
