--- a/src/app/Components/texto/texto.component.html
+++ b/src/app/Components/texto/texto.component.html
@@ -1,2 +1,6 @@
-<!-- texto.component.html -->
-<input type="text" (input)="onTextChange($event)" placeholder="Ingrese su texto" />
+<input 
+  type="text" 
+  [value]="textValue" 
+  (input)="onTextChange($event)" 
+  placeholder="Ingrese su texto" />
+
