--- a/src/app/Components/web-view/web-view.component.html
+++ b/src/app/Components/web-view/web-view.component.html
@@ -9,7 +9,8 @@
       <div class="buttons">
         <div class="top-buttons">
           <app-accept-component (acceptClick)="onAccept()"></app-accept-component>
-          <app-cancel-component (cancelClick)="onCancel()"></app-cancel-component>
+          <!-- Ejemplo de cómo se podría ver el botón de cancelar -->
+          <app-cancel-component (cancelClick)="onCancel()"></app-cancel-component>  
         </div>
         <div class="bottom-buttons">
           <app-primary-component (colorChange)="handleColorChange($event)"></app-primary-component>
@@ -24,15 +25,24 @@
       <div class="input-fields">
         <div class="input-group">
           <label for="email">Correo:</label>
-          <app-e-mail (emailChange)="handleEmailChange($event)"></app-e-mail>
+          <app-e-mail 
+      [emailValue]="email" 
+      (emailChange)="handleEmailChange($event)">
+    </app-e-mail>
         </div>
         <div class="input-group">
           <label for="password">Contraseña:</label>
-          <app-contrasena (passwordChange)="handlePasswordChange($event)"></app-contrasena>
+          <app-contrasena 
+    [passwordValue]="password" 
+    (passwordChange)="handlePasswordChange($event)">
+  </app-contrasena>
         </div>
         <div class="input-group">
           <label for="text">Texto:</label>
-          <app-texto (textChange)="handleTextChange($event)"></app-texto>
+          <app-texto 
+    [textValue]="text" 
+    (textChange)="handleTextChange($event)">
+  </app-texto>
         </div>
       </div>
     </div>
